--- a/index.html
+++ b/index.html
@@ -1,8 +1,138 @@
-<p>Hello 大家好</p>
-<p>我是个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!DOCTYPE html>
+<html>
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="author" content="zuochen">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 设置网页尺寸自适应 -->
+    <title>登录界面</title>
+    <style>
+      body {
+        background-image: url('D:\\edge_download\\luca-micheli-ruWkmt3nU58-unsplash.jpg');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        background-attachment: fixed;
+      }
+
+      h1 {
+        color: white;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+      }
+
+      .main {
+        width: 500px;
+        height: 300px;
+        box-shadow: 0 5px 20px 0 #e8e8e8;
+        background-color: rgba(29, 29, 31, 0.52);
+        border-radius: 25px;
+        position: absolute;
+        right: 0;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+      }
+
+      .content {
+        margin-top: 5px;
+        margin-left: 25%;
+      }
+
+      .input {
+        display: block;
+        background: none;
+        color: white;
+        border: 0;
+        width: 50%;
+        font-size: 15px;
+        border-bottom: 2px solid #fff;
+        margin-top: 5px;
+        margin-left: 25%;
+        outline: none;
+        text-align: center;
+        line-height:35px;
+      }
+
+      .button {
+        width: 150px;
+        height: 30px;
+        color: white;
+        background-color: rgba(29, 29, 31, 0.12);
+        border-radius: 20px;
+        border-width: 3px;
+        border-color: rgba(0, 0, 0, 0.3);
+        padding: 15px;
+        outline: none;
+        cursor: pointer;
+        margin: auto;
+
+        text-align: center;
+        line-height: 0px;
+        font-size: 20px;
+      }
+
+      .button:hover {
+        width: 150px;
+        height: 30px;
+        color: white;
+        background-color: rgba(29, 29, 31, 0.72);
+        border-radius: 20px;
+        border-color: rgba(0, 0, 0, 0.3);
+        padding: 15px;
+        outline: none;
+        cursor: pointer;
+      }
+
+      #load {
+        font-size: 10px;
+        margin-top: 25px;
+        margin-left: 50px;
+      }
+
+      #clear {
+        font-size: 10px;
+        margin-top: 25px;
+        margin-left: 70px;
+      }
+
+      .pic {
+        display: flex;
+        padding-right: 50%;
+      }
+
+      .pic div {
+        padding-top: 15px;
+        padding-left: 60%;
+      }
+
+      .qq,
+      .wechat {
+        height: 20px;
+        width: 20px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="main">
+      <h1>BNU-GEO SYSTEM</h1>
+      <div class="contain"><input class="input" type="text" placeholder="Please enter your account number" autofocus="true">
+        <input class="input" type="password" placeholder="Please enter your passaword" autofocus="true">
+      </div>
+      <input type=button class=button id="load" value="load" style="font-size:15px;">
+      <input type=button class=button id="clear" value="clear" style="font-size:15px;">
+      <div class="pic">
+        <div><img src="C:\Users\zuochen\Desktop\素材\qq.png" class='qq' alt="qq" /></div>
+        <div><img src="C:\Users\zuochen\Desktop\素材\wechat.png" class='wechat' alt="wechat" /></div>
+      </div>
+      <div style="text-align: right; margin-right:20px;"><a href="http://www.wechat.com"
+          style="color: white; font-size:10px; ">forgot passaword</a></div>
+
+    </div>
+  </body>
+
+</html>
