--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>登录界面</title>
     <style>
       body {
-        background-image: url('.\resouece\background.jpg');
+        background-image: url('../resource/background.jpg');
         background-repeat: no-repeat;
         background-size: 100% 100%;
         background-attachment: fixed;
